# railscale

./: .gitignore  Cargo.toml  README.md
loadtest-results/20260329_091718/: plot.html  report.txt
loadtest-results/20260329_092447/: plot.html
locomotive/: Cargo.toml
locomotive/examples/: basic.rs
locomotive/src/: codec.rs  destination.rs  frame.rs  lib.rs  parser.rs  pipeline.rs  source.rs
locomotive/tests/: codec_test.rs  destination_test.rs  frame_test.rs  integration_test.rs  pipeline_test.rs  source_test.rs
poc/: Cargo.toml  gen-chart.py  loadtest.sh
poc/src/: codec.rs  main.rs  stream.rs
rail_carriage/: Cargo.toml
rail_carriage/examples/: basic.rs
rail_carriage/src/: http.rs  lib.rs  mapped_http_stream.rs  meta_codec.rs
rail_proto/: Cargo.toml
rail_proto/src/: lib.rs  main.rs
rail_proto/src/carriage/: dataframe.rs  disembark.rs  gate.rs  listener.rs  manifest.rs  mod.rs  nontailscale.rs  processor.rs  ticket_pipeline.rs
rail_proto/src/carriage/passengers/: http.rs  tcp.rs  tls.rs
rail_proto/src/dns/: mod.rs  server.rs
rail_proto/tests/: dns_message_tests.rs  dns_resolver_tests.rs  http_passenger_tests.rs  passenger_proptest.proptest-regressions  passenger_proptest.rs  tcp_passenger_tests.rs  tls_passenger_tests.rs
rail_turnout/: Cargo.toml
rail_turnout/src/dns/: message.rs  resolver.rs
track/: Cargo.toml
track/src/: destination.rs  frame.rs  lib.rs  parser.rs  pipeline.rs  sampler.rs  service.rs  source.rs
track/tests/: destination_test.rs  parser_test.rs  pipeline_trait_test.rs  source_test.rs
