[workspace]
members = ["poc", "locomotive", "track"]
resolver = "3"


[workspace.dependencies]
async-trait = "0.1.89"
tokio = {version = "1.50.0", features = ["full"]}
tokio-stream = {version = "0.1.18"}
tokio-util = {version = "0.7.18", features = ["codec"]}
bytes = "1"
memchr = "2"
pin-project-lite = "0.2"
rsnet={version = "0.1.0"}
proptest = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.11.0"
sysinfo = "0.38"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.27", features = ["metrics"] }
