[package]
name = "locomotive"
version = "0.1.0"
edition = "2024"

[dependencies]
train_track = { path = "../track" }
bytes = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-stdout = { workspace = true }
hotpath = "0.14"


[features]
hotpath = ["hotpath/hotpath", "hotpath/tokio"]