[package]
name = "rail_carriage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tokio-util = {workspace = true, version = "1.0.0", features = ["io"] }
bytes = {workspace = true}
memchr = {workspace = true}
pin-project-lite = {workspace = true}
rayon = {workspace = true}
