[package]
name = "rail_proto"
version = "0.1.0"
edition = "2024"

[features]
default = []
tailscale = []

[[bin]]
name = "railscale"
path = "src/main.rs"

[dependencies]
async-trait = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tokio-util = {workspace = true}
bytes = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
rail_turnout = {path = "../rail_turnout"}
rail_carriage = {path = "../rail_carriage"}
# rsnet = "0.1"

[dev-dependencies]
proptest = {workspace = true}
tokio = {workspace = true}
rail_carriage = {path = "../rail_carriage"}
rail_turnout = {path = "../rail_turnout"}