[package]
name = "train_track"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
sysinfo = { workspace = true }

hotpath = "0.14"


[features]
hotpath = ["hotpath/hotpath", "hotpath/tokio"]